--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "styled-components": "^5.2.0",
     "expo-camera": "~9.0.0",
     "expo-image-picker": "~9.1.0",
-    "expo-permissions": "~9.3.0"
+    "expo-permissions": "~9.3.0",
+    "expo-media-library": "~9.2.1",
+    "expo-av": "~8.6.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
