--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
     "expo": "~39.0.2",
+    "expo-av": "~8.6.0",
+    "expo-camera": "~9.0.0",
+    "expo-image-picker": "~9.1.0",
+    "expo-media-library": "~9.2.1",
+    "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
+    "google-maps-react": "^2.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
@@ -24,12 +30,7 @@
     "react-native-scalable-image": "^1.0.0",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.2.0",
-    "expo-camera": "~9.0.0",
-    "expo-image-picker": "~9.1.0",
-    "expo-permissions": "~9.3.0",
-    "expo-media-library": "~9.2.1",
-    "expo-av": "~8.6.0"
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
