--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-google-maps/api": "^1.10.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.1",
     "@react-navigation/native": "^5.7.5",
@@ -15,9 +16,11 @@
     "expo": "~39.0.2",
     "expo-av": "~8.6.0",
     "expo-camera": "~9.0.0",
+    "expo-constants": "^9.2.0",
     "expo-image-picker": "~9.1.0",
+    "expo-location": "^9.0.0",
     "expo-media-library": "~9.2.1",
-    "expo-permissions": "~9.3.0",
+    "expo-permissions": "^9.3.0",
     "expo-status-bar": "~1.0.2",
     "google-maps-react": "^2.0.6",
     "react": "16.13.1",
@@ -25,6 +28,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-camera": "^3.40.0",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-maps": "^0.27.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-scalable-image": "^1.0.0",
