--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo": "~39.0.2",
     "expo-av": "~8.6.0",
     "expo-camera": "~9.0.0",
-    "expo-constants": "^9.2.0",
+    "expo-constants": "~9.2.0",
     "expo-image-picker": "~9.1.0",
     "expo-location": "^9.0.0",
     "expo-media-library": "~9.2.1",
