--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "expo-status-bar": "~1.0.2",
     "google-maps-react": "^2.0.6",
     "react": "16.13.1",
+    "react-device-detect": "^1.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native": "^0.63.3",
     "react-native-camera": "^3.40.0",
     "react-native-gesture-handler": "~1.7.0",
-    "react-native-maps": "^0.27.1",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-scalable-image": "^1.0.0",
@@ -37,7 +38,8 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "react-app-rewired": "^2.1.6"
   },
   "private": true
 }
