--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-camera": "^3.40.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-maps": "0.27.1",
+    "react-native-material-ui": "^1.30.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-scalable-image": "^1.0.0",
